projects/vb6parse/snapshots/tests/class/environment/environment_copyinout_class_load.snap
---
source: projects/vb6parse/tests/class/environment.rs
expression: class
---
header:
  version:
    major: 1
    minor: 0
  properties:
    multi_use: MultiUse
    persistable: NotPersistable
    data_binding_behavior: None
    data_source_behavior: None
    mts_transaction_mode: NotAnMTSObject
  attributes:
    name: CopyInOut
    global_name_space: Local
    creatable: "True"
    predeclared_id: "False"
    exposed: "True"
    description: ~
    ext_key: {}
cst:
  root:
    kind: Root
    children:
      - kind: DimStatement
        children:
          - kind: PublicKeyword
            text: Public
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: actualvar
          - kind: Whitespace
            text: " "
          - kind: AsKeyword
            text: As
          - kind: Whitespace
            text: " "
          - kind: StringKeyword
            text: String
          - kind: Newline
            text: "\r\n"
      - kind: DimStatement
        children:
          - kind: PublicKeyword
            text: Public
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: ArrArg
          - kind: Whitespace
            text: " "
          - kind: AsKeyword
            text: As
          - kind: Whitespace
            text: " "
          - kind: StringKeyword
            text: String
          - kind: Newline
            text: "\r\n"
      - kind: DimStatement
        children:
          - kind: PublicKeyword
            text: Public
          - kind: Whitespace
            text: " "
          - kind: Identifier
            text: localvar
          - kind: Whitespace
            text: " "
          - kind: AsKeyword
            text: As
          - kind: Whitespace
            text: " "
          - kind: LongKeyword
            text: Long
          - kind: Newline
            text: "\r\n"
